@@ -2,7 +2,7 @@ Package: ccaPP
 Type: Package
 Title: (Robust) canonical correlation analysis via projection pursuit
 Version: 0.2.0
-Date: 2012-08-24
+Date: 2012-09-11
 Depends:
     Rcpp (>= 0.9.10),
     parallel,
