@@ -63,6 +63,13 @@
 #' the second integer (see \dQuote{Details}).
 #' @param tol,zero.tol  a small positive numeric value to be used for 
 #' determining convergence.
+#' @param fallback  logical; if a correlation functional other than the 
+#' Pearson correlation is maximized, the data are first robustly standardized 
+#' via median and MAD.  This indicates whether standardization via mean and 
+#' standard deviation should be performed as a fallback mode for variables 
+#' whose MAD is zero (e.g., for dummy variables).  Note that if the Pearson 
+#' correlation is maximized, the data are always standardized via mean and 
+#' standard deviation.
 #' @param seed  optional initial seed for the random number generator (see 
 #' \code{\link{.Random.seed}}).  This is only used if \code{select} specifies 
 #' the numbers of variables of each data set to be randomly selected for 
@@ -118,7 +125,7 @@
 ccaGrid <- function(x, y, k = 1, 
         method = c("spearman", "kendall", "quadrant", "M", "pearson"), 
         control = list(...), nIterations = 10, nAlternate = 10, nGrid = 25, 
-        select = NULL, tol = 1e-06, seed = NULL, ...) {
+        select = NULL, tol = 1e-06, fallback = FALSE, seed = NULL, ...) {
     ## initializations
     matchedCall <- match.call()
     ## define list of control arguments for algorithm
@@ -129,8 +136,8 @@ ccaGrid <- function(x, y, k = 1,
     ppControl <- list(nIterations=nIterations, nAlternate=nAlternate, 
         nGrid=nGrid, select=select, tol=tol)
     ## call workhorse function
-    cca <- ccaPP(x, y, k, method=method, corControl=control, 
-        algorithm="grid", ppControl=ppControl)
+    cca <- ccaPP(x, y, k, method=method, corControl=control, algorithm="grid", 
+        ppControl=ppControl, fallback=fallback, seed=seed)
     cca$call <- matchedCall
     cca
 }
@@ -142,13 +149,13 @@ ccaGrid <- function(x, y, k = 1,
 CCAgrid <- function(x, y, k = 1, 
         method = c("spearman", "kendall", "quadrant", "M", "pearson"), 
         maxiter = 10, maxalter = 10, splitcircle = 25, select=NULL, 
-        zero.tol = 1e-06, seed = NULL, ...) {
+        zero.tol = 1e-06, fallback = FALSE, seed = NULL, ...) {
     ## initializations
     matchedCall <- match.call()
     ## call ccaGrid()
     cca <- ccaGrid(x, y, k=k, method=method, nIterations=maxiter, 
         nAlternate=maxalter, nGrid=splitcircle, select=select, 
-        tol=zero.tol, seed=seed, ...)
+        tol=zero.tol, fallback=fallback, seed=seed, ...)
     cca$call <- matchedCall
     cca
 }
@@ -182,6 +189,13 @@ CCAgrid <- function(x, y, k = 1,
 #' \code{TRUE}).  If \code{FALSE}, the columnwise centers are used instead 
 #' (columnwise means if \code{method} is \code{"pearson"} and columnwise 
 #' medians otherwise).
+#' @param fallback  logical; if a correlation functional other than the 
+#' Pearson correlation is maximized, the data are first robustly standardized 
+#' via median and MAD.  This indicates whether standardization via mean and 
+#' standard deviation should be performed as a fallback mode for variables 
+#' whose MAD is zero (e.g., for dummy variables).  Note that if the Pearson 
+#' correlation is maximized, the data are always standardized via mean and 
+#' standard deviation.
 #' @param \dots  additional arguments to be passed to the specified correlation 
 #' functional.  Currently, this is only relevant for the M-estimator.  For 
 #' Spearman, Kendall and quadrant correlation, consistency at the normal model 
@@ -232,14 +246,14 @@ CCAgrid <- function(x, y, k = 1,
 
 ccaProj <- function(x, y, k = 1, 
         method = c("spearman", "kendall", "quadrant", "M", "pearson"), 
-        control = list(...), useL1Median = TRUE, ...) {
+        control = list(...), useL1Median = TRUE, fallback = FALSE, ...) {
     ## initializations
     matchedCall <- match.call()
     ## define list of control arguments for algorithm
     ppControl <- list(useL1Median=isTRUE(useL1Median))
     ## call workhorse function
     cca <- ccaPP(x, y, k, method=method, corControl=control, algorithm="proj", 
-        ppControl=ppControl)
+        ppControl=ppControl, fallback=fallback)
     cca$call <- matchedCall
     cca
 }
@@ -250,11 +264,12 @@ ccaProj <- function(x, y, k = 1,
 
 CCAproj <- function(x, y, k = 1, 
         method = c("spearman", "kendall", "quadrant", "M", "pearson"), 
-        useL1Median = TRUE, ...) {
+        useL1Median = TRUE, fallback = FALSE, ...) {
     ## initializations
     matchedCall <- match.call()
     ## call ccaProj()
-    cca <- ccaProj(x, y, k=k, method=method, useL1Median=useL1Median, ...)
+    cca <- ccaProj(x, y, k=k, method=method, useL1Median=useL1Median, 
+        fallback=fallback, ...)
     cca$call <- matchedCall
     cca
 }
@@ -264,7 +279,7 @@ CCAproj <- function(x, y, k = 1,
 ccaPP <- function(x, y, k = 1, 
         method = c("spearman", "kendall", "quadrant", "M", "pearson"), 
         corControl, forceConsistency = TRUE, algorithm = c("grid", "proj"), 
-        ppControl, seed = NULL) {
+        ppControl, fallback = FALSE, seed = NULL) {
     ## initializations
     x <- as.matrix(x)
     y <- as.matrix(y)
@@ -327,7 +342,8 @@ ccaPP <- function(x, y, k = 1,
         # call C++ function
         cca <- .Call("R_ccaPP", R_x=x, R_y=y, R_k=k, R_method=method, 
             R_corControl=corControl, R_algorithm=algorithm, 
-            R_ppControl=ppControl, PACKAGE="ccaPP")
+            R_ppControl=ppControl, R_fallback=isTRUE(fallback), 
+            PACKAGE="ccaPP")
         cca$cor <- drop(cca$cor)
     }
     ## assign class and return results
