@@ -6,8 +6,8 @@
   maxCorGrid(x, y,
     method = c("spearman", "kendall", "quadrant", "M", "pearson"),
     control = list(...), nIterations = 10, nAlternate = 10,
-    nGrid = 25, select = NULL, tol = 1e-06, seed = NULL,
-    ...)
+    nGrid = 25, select = NULL, tol = 1e-06,
+    fallback = FALSE, seed = NULL, ...)
 }
 \arguments{
   \item{x,y}{each can be a numeric vector, matrix or data
@@ -52,6 +52,16 @@
 
   \item{tol}{a small positive numeric value to be used for
   determining convergence.}
+
+  \item{fallback}{logical; if a correlation functional
+  other than the Pearson correlation is maximized, the data
+  are first robustly standardized via median and MAD.  This
+  indicates whether standardization via mean and standard
+  deviation should be performed as a fallback mode for
+  variables whose MAD is zero (e.g., for dummy variables).
+  Note that if the Pearson correlation is maximized, the
+  data are always standardized via mean and standard
+  deviation.}
 
   \item{seed}{optional initial seed for the random number
   generator (see \code{\link{.Random.seed}}).  This is only
