@@ -13,6 +13,12 @@ Changes in ccaPP version 0.2.0
     + permTest(): argument 'cl' is now preferred over argument 'ncores' for 
       parallel computing.
     
+    + Added fallback mode for robust standardization if the MAD of a variable 
+      is zero.
+    
+    + Bugfix in ccaGrid() and its wrapper CCAgrid: seed for the random number 
+      generator is no longer ignored.
+    
     + Bugfix in CCAproj(): now correctly wrapped around ccaProj().
 
 
